--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "engines": {
-    "node": "22.x"
+    "node": "22.x",
+    "pnpm": "7.x"
   },
   "dependencies": {
     "react": "^19.0.0",
